force-app/main/default/objects/Activity/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <formula>if(contains(Subject,&quot;Pardot&quot;),&quot;Pardot&quot;,
if(contains(Subject,&quot;Call&quot;),&quot;Call&quot;,
if(contains(Subject,&quot;mail&quot;),&quot;Mail&quot;,
if(contains(Subject,&quot;trade&quot;),&quot;Trade Show&quot;,
if(contains(Subject,&quot;meet&quot;),&quot;Meeting&quot;,&quot;Other&quot;)))))</formula>
    <label>Activity</label>
    <type>Text</type>
</CustomField>