force-app/main/default/objects/Activity/fields/Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Activity_Category__c</fullName>
    <label>Activity Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Orange Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>