force-app/main/default/objects/Activity/fields/Activity_Log_Method__c.field-meta.xml
<CustomField>
    <fullName>Activity_Log_Method__c</fullName>
    <label>Activity Log Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ActivityCreate GlobalAction</fullName>
            </value>
            <value>
                <fullName>LogCall ISR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>