force-app/main/default/objects/Activity/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <formula>if(Call__c=true, &apos;Call&apos;,
if(Visit__c=true, &apos;Meeting&apos;,
if(  Begins(lower(Subject), &apos;email&apos;)=true,&apos;Email&apos;,  
if(  Email__c =true, &apos;Email&apos;  ,
if( not(isblank(WhoId)), &apos;Meeting&apos;, 
&apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Type</label>
    <type>Text</type>
</CustomField>