force-app/main/default/objects/Activity/fields/Any_Help_Needed__c.field-meta.xml
<CustomField>
    <fullName>Any_Help_Needed__c</fullName>
    <label>Any Help Needed</label>
    <length>200</length>
    <type>Text</type>
</CustomField>