force-app/main/default/objects/Activity/fields/Assigned_Country__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Country__c</fullName>
    <formula>Owner:User.Country</formula>
    <label>Assigned Country</label>
    <type>Text</type>
</CustomField>