force-app/main/default/objects/Activity/fields/Assigned_is_Active__c.field-meta.xml
<CustomField>
    <fullName>Assigned_is_Active__c</fullName>
    <formula>if(Owner:User.IsActive =true, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned is Active</label>
    <type>Checkbox</type>
</CustomField>