force-app/main/default/objects/Activity/fields/Assigned_Sales_Category__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Category__c</fullName>
    <formula>text(Owner:User.Sales_Category__c)</formula>
    <label>Assigned Sales Category</label>
    <type>Text</type>
</CustomField>