force-app/main/default/objects/Activity/fields/Assigned_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Manager__c</fullName>
    <formula>Owner:User.FirstName &amp;&apos; &apos;&amp;Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Sales Manager</label>
    <type>Text</type>
</CustomField>