force-app/main/default/objects/Activity/fields/CampaignCheck__c.field-meta.xml
<CustomField>
    <fullName>CampaignCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if the task has been searched for related campaign so the schedule only runs record once</description>
    <label>CampaignCheck</label>
    <type>Checkbox</type>
</CustomField>