force-app/main/default/objects/Activity/fields/Close__c.field-meta.xml
<CustomField>
    <fullName>Close__c</fullName>
    <formula>HYPERLINK(&quot;/ Id  /e?close=1&amp;retURL=/home/home.jsp&quot;, &quot;Close&quot; ,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close</label>
    <type>Text</type>
</CustomField>