force-app/main/default/objects/Activity/fields/Concerns__c.field-meta.xml
<CustomField>
    <fullName>Concerns__c</fullName>
    <label>Concerns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>