force-app/main/default/objects/Activity/fields/Created_by_Manager__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Manager__c</fullName>
    <formula>CreatedBy.Manager.FirstName &amp;&quot; &quot; &amp;CreatedBy.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Manager</label>
    <type>Text</type>
</CustomField>