force-app/main/default/objects/Activity/fields/Current_User_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Manager__c</fullName>
    <description>To easily filter reports based on manager</description>
    <formula>if(Owner:User.Manager.FirstName &amp;&quot; &quot;&amp;Owner:User.Manager.LastName =  $User.FirstName &amp;&quot; &quot;&amp;$User.LastName, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User = Manager</label>
    <type>Checkbox</type>
</CustomField>