force-app/main/default/objects/Activity/fields/Customer_Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Rep__c</fullName>
    <label>Customer Service Rep</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CS_Rep</valueSetName>
    </valueSet>
</CustomField>