force-app/main/default/objects/Activity/fields/CustomerService__c.field-meta.xml
<CustomField>
    <fullName>CustomerService__c</fullName>
    <formula>if( isblank(text(CreatedBy.Sales_Category__c ))=true,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>