force-app/main/default/objects/Activity/fields/In_Session_Duration__c.field-meta.xml
<CustomField>
    <fullName>In_Session_Duration__c</fullName>
    <description>This is the amount of time the contact was actually &quot;On&quot; the call or Webinar.</description>
    <label>In Session Duration</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>