force-app/main/default/objects/Activity/fields/Interest_Score__c.field-meta.xml
<CustomField>
    <fullName>Interest_Score__c</fullName>
    <description>This score represents the interest level of this contact.</description>
    <label>Interest Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>