force-app/main/default/objects/Activity/fields/isParterTask__c.field-meta.xml
<CustomField>
    <fullName>isParterTask__c</fullName>
    <formula>not(isblank(Owner:User.ContactId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isParterTask</label>
    <type>Checkbox</type>
</CustomField>