force-app/main/default/objects/Activity/fields/Lead_Related_Activity__c.field-meta.xml
<CustomField>
    <fullName>Lead_Related_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Related Activity</label>
    <type>Checkbox</type>
</CustomField>