force-app/main/default/objects/Activity/fields/Mass_Email__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used in flows that produce mass emails to ensure that the campaign email flow is not triggered during mass emails. Otherwise SOQL Query limits will be exceeded causing an error.</description>
    <label>Mass Email</label>
    <type>Checkbox</type>
</CustomField>