force-app/main/default/objects/Activity/fields/NewTask__c.field-meta.xml
<CustomField>
    <fullName>NewTask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to be updated on outlook email sync and then batched to check if it relates to any campaigns to tie to any campaigns</description>
    <label>NewTask</label>
    <type>Checkbox</type>
</CustomField>