force-app/main/default/objects/Activity/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <label>Opportunities</label>
    <length>200</length>
    <type>Text</type>
</CustomField>