force-app/main/default/objects/Activity/fields/Reseller_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Engagement__c</fullName>
    <label>Reseller Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solid</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>