force-app/main/default/objects/Activity/fields/Reseller_Type__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Type__c</fullName>
    <formula>if(text(Account__r.Type) = &quot;NSP&quot;, &quot;National&quot;, text(Account__r.Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reseller Type</label>
    <type>Text</type>
</CustomField>