force-app/main/default/objects/Activity/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <formula>if(not(isblank(text(CreatedBy.Sales_Category__c )))= true,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>