force-app/main/default/objects/Activity/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting</label>
    <type>Checkbox</type>
</CustomField>