force-app/main/default/objects/Activity/fields/Webinar_Name__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Name__c</fullName>
    <label>Webinar Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SD Solutions Webinar 7-17-2012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>