force-app/main/default/objects/Activity/fields/Weekly_Note__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly Note</label>
    <type>Checkbox</type>
</CustomField>