force-app/main/default/objects/Activity/listViews/C1_My_Unassociated_Tasks.listView-meta.xml
<ListView>
    <fullName>C1_My_Unassociated_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.PRIORITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.WHO_NAME</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TASK.WHAT_NAME</field>
        <operation>equals</operation>
    </filters>
    <label>C1 - My Unassociated Tasks</label>
</ListView>