force-app/main/default/objects/Activity/listViews/C3_My_Uncategorized_Activites.listView-meta.xml
<ListView>
    <fullName>C3_My_Uncategorized_Activites</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.TYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
    </filters>
    <label>C3 - My Uncategorized Activites</label>
</ListView>